--- a/app/views/jerseys/_form.html.erb
+++ b/app/views/jerseys/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :player %>
   <%= f.input :number %>
   <%= f.input :year %>
-  <%= f.input :size %>
+  <%= f.input :size %>   <%# validations modele !!! %>
   <%= f.input :state %>  <%# validations modele !!! %>
   <%= f.input :description %>
   <%= f.input :photo %>
