Show maillot brazil

--- a/app/views/jerseys/show.html.erb
+++ b/app/views/jerseys/show.html.erb
@@ -1,7 +1,48 @@
-<h1>Location maillots vintages</h1>
+<div class="_1rwRc" data-hook="sku">SKU : LCSICPLMTBR70S1</div>
+<div class="container-maillot">
+  <div class="container-show-left">
+    <h1 data-hook="product-title" class="_2qrJF">Maillot Brésil 1970</h1>
+  <div data-hook="breadcrumbs">
+    <a href="https://www.lecollectionneursportif.fr" aria-disabled="false">Accueil</a> /
+    <a href="https://www.lecollectionneursportif.fr/maillots-photos-chaussures-ballons-signes-dedicaces-certifies-pele" aria-disabled="false">Pelé</a> /
+    <a aria-disabled="true">Maillot Brésil 1970 signé par Pelé</a>
+  </div>
 
-<div class="image"></div>
+  <img class="_1jx3x _24O7B er7Ub" data-hook="product-image" src="https://static.wixstatic.com/media/577107_22aea54530494209ba57ed1d74eb2ed3~mv2.webp" alt="Maillot Brésil 1970 signé par Pelé" aria-hidden="false" style="width: 488.764px; height: 500px;">
+    <div class="_3bNb3 fggS- cell">
+      <div data-hook="product-prices-wrapper" class="_2dNDU">
+        <div data-hook="product-price" class="_2POY8">
+          <div class="_26qxh">
+            <span data-hook="formatted-primary-price">100 €/jour</span>
+            <span class="sr-only" data-hook="sr-formatted-primary-price">Prix</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<%= image_tag "Pelé_Brésil.jpg",style: 'height:20vw;width:20vw;margin-bottom:20px;' %>
+  <p class="Text2446266173__root Text2446266173---typography-11-runningText Text2446266173---priority-7-primary s8gg2 _2UIKs InfoSectionTitle3095652555__root" aria-hidden="false" data-hook="info-section-title">Réservation</p>
+  <div>
+    <label>
+      <span data-hook="number-input-spinner-title" class="_3N3nl">
+        Date de réservation
+      </span>
+    </label>
+    <div class="_2uERl" data-hook="number-input-spinner-container">
+      <input type="number" pattern="[0-9]*" data-hook="number-input-spinner-input" aria-label="Quantité" max="99999" date="Day/Month" value="Day/Month">
+      <div data-hook="number-input-spinner-arrows-container" class="bKBvP" aria-hidden="true">
+        <span data-hook="number-input-spinner-up-arrow" class="_11lkb">
+        </span>
+        <span data-hook="number-input-spinner-down-arrow" class="_3Bjyb _4Irna">
+        </span>
+      </div>
+    </div>
+  </div>
+  </div>
 
-<p>Réserver votre maillot de Pelé du Brésil</p>
+  <div class="container-show-right">
+  <p style="float:right"><p>Ce maillot encadré du Brésil identique à celui porté lors de la Coupe du Monde 1970 avec le nom en plus a été signé par Pelé lors d'une séance de dédicace privée organisée par l'un de nos partenaires. Chaque maillot signé est accompagné d'un certificat d'authenticité officiel prouvant que la signature de Pelé est 100% authentique. Il y a peu de sportifs aussi connus dans le monde que Edson Arantes do Nascimento, plus connu sous le nom de Pelé. Bien que le triple vainqueur de la Coupe du monde de la FIFA soit souvent considéré comme le plus grand joueur de tous les temps, c'est la combinaison de ses talents de joueur de champ et de son comportement digne qui ont fait du Brésilien l'un des sportifs les plus populaires de tous les temps. Il reste le seul joueur à avoir remporté trois fois la Coupe du monde de la FIFA et il est l'un des quatre hommes à avoir marqué en deux finales de la Coupe du monde de la FIFA. Il a trouvé le chemin des filets à 77 reprises en 91 matches pour son pays, et a réalisé la performance de marquer 127 buts en 1959 ! Enfin en 1970, Pelé a mené le Brésil dans ce qui est sans doute la plus grande performance de tous les temps dans un tournoi mondial.</p>
+  </div>
+</div>
+<span style="font-size:11px;">Chaque exemplaire est unique, et l'article que vous recevez peut différer légèrement de celui illustré :&nbsp;<span style="font-weight:bold;"><a href="https://www.lecollectionneursportif.fr/presentation-societe" target="_self" data-anchor="dataItem-kty5620v">+ infos</a></span></span>
+
+<img src="./monimage.jpg">
