Seed generation finalized

--- a/app/views/jerseys/edit.html.erb
+++ b/app/views/jerseys/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Jerseys#edit</h1>
-<p>Find me in app/views/jerseys/edit.html.erb</p>
+<h1>Edit your Jersey</h1>
+
+<%= render 'form', jersey: @jersey %>
