--- a/app/views/jerseys/new.html.erb
+++ b/app/views/jerseys/new.html.erb
@@ -1,3 +1,5 @@
-What wonderfull jersey do you want to share with us?
-
-<%= render 'form', jersey: @jersey %>
+<div class="container w-75" >
+  <h1>Add wonderfull your jersey
+  </h1>
+  <%= render 'form', jersey: @jersey %>
+</div>
