Ajout des validations, fix du log out, création de la page myshop, ajout des authorisations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+.navbar {
+  background-color: rgb(199, 45, 199);
+
+  .navbar-nav {
+    color: white !important;
+  }
+}
