--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <%= link_to "Hot Maillot Sauce", jerseys_path, class:"navbar-brand" %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <% if current_user.nil? %>
@@ -15,13 +18,13 @@
             <%= link_to "Rent a Jersey", new_jersey_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "My Shop", jerseys_path, class:"nav-link" %>
+            <%= link_to "My Shop", shop_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "My Orders", orders_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Log Out", destroy_user_session_path, class:"nav-link" %>
+            <%= link_to "Log Out", destroy_user_session_path, method: "delete", class:"nav-link" %>
           </li>
         <% end %>
       </ul>
