--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,14 @@
 
 
 .navbar {
-  background-color: rgb(199, 45, 199);
+  background-color: #35ee25;
+  
 
   .navbar-nav {
     color: white !important;
   }
+}
+
+body{
+  background-image: url(https://cdn.midjourney.com/c2c29230-3d7d-4604-8c24-d3bf027e2716/grid_0.png);
 }
