css de la new ok, à harmonier avec charte couleurs/font à venir

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/_jerseys-new";
 
 
 .navbar {
   background-color: #35ee25;
-  
+
 
   .navbar-nav {
     color: white !important;
