--- a/app/views/jerseys/new.html.erb
+++ b/app/views/jerseys/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container w-75" >
-  <h1>Add wonderfull your jersey
+<div class="form container w-75 " >
+  <h1 class="title">Add your wonderfull jersey
   </h1>
   <%= render 'form', jersey: @jersey %>
 </div>
