--- a/app/views/jerseys/_form.html.erb
+++ b/app/views/jerseys/_form.html.erb
@@ -1,14 +1,23 @@
-<%= simple_form_for(@jersey) do |f| %>
-  <%= f.input :team, required: true %>
-  <%= f.input :player %>
-  <%= f.input :number %>
-  <%= f.input :year, required: true, collection: 1945..2023 %>
-  <%= f.input :size, required: true, collection: ['XS', 'S', 'M', 'L', 'XL', 'XXL'] %>
-  <%= f.input :state, required: true, collection: ['Full of swet', 'Good enough', 'Smell victory'] %>
-  <%= f.input :description %>
-  <%= f.input :photo, required: true, placeholder: 'Lien de ta photo' %>
-  <%# <%= f.file :photo, required: true %>
-  <%# # // quand fonction ok %>
-  <%= f.input :price_per_day, required: true %>
-  <%= f.submit %>
-<% end %>
+<div class='partial-form'>
+  <%= simple_form_for(@jersey) do |f| %>
+
+  <div>
+    <%= f.input :team, required: true %>
+    <%= f.input :player %>
+    <%= f.input :number %>
+    <%= f.input :year, required: true, collection: 1945..2023 %>
+    <%= f.input :size, required: true, collection: ['XS', 'S', 'M', 'L', 'XL', 'XXL'] %>
+    <%= f.input :state, required: true, collection: ['Full of swet', 'Good enough', 'Smell victory'] %>
+    <%= f.input :description %>
+    <%= f.input :photo, required: true, placeholder: 'Lien de ta photo' %>
+    <%# <%= f.file :photo, required: true %>
+    <%# # // quand fonction ok %>
+    <%= f.input :price_per_day, required: true %>
+  </div>
+
+  <div class='partial-btn-submit'>
+      <%= f.submit class: "btn-submit" %>
+  </div>
+
+  <% end %>
+</div>
