--- a/app/views/jerseys/show.html.erb
+++ b/app/views/jerseys/show.html.erb
@@ -32,12 +32,12 @@
     </div>
     <div class="right-part">
       <div class="booking">
-        <div class="booking-card">
+        <div class="booking-card" data-controller="price-updater">
           <div class="title d-flex justify-content-center">
             <h2>Booking</h2>
           </div>
           <div class="price-bloc d-flex justify-content-evenly mt-3">
-            <div class="price">
+            <div class="price" data-target="price-updater.price_per_day">
               <%= "#{@jersey.price_per_day}$ / day" %>
             </div>
             <div class="stars">
@@ -48,10 +48,23 @@
             <form method="POST" action="#">
               <div class="date-bloc d-flex justify-content-center mt-5">
                 <div class="begin-date">
-                  <input type="date" id="begin-date" name="begin-date" value="2023-03-01" min="2023-03-01" max="2999-12-31">
+                  <input type="date"
+                  id="begin-date"
+                  name="begin-date"
+                  value="2023-03-01"
+                  min="2023-03-01"
+                  max="2999-12-31"
+                  data-target="price-updater.begin_date">
                 </div>
                 <div class="end-date">
-                  <input type="date" id="end-date" name="end-date" value="2023-03-01" min="2023-03-01" max="2999-12-31">
+                  <input type="date"
+                  id="end-date"
+                  name="end-date"
+                  value="2023-03-01"
+                  min="2023-03-01"
+                  max="2999-12-31"
+                  data-target="price-updater.end_date"
+                  data-action="change->price-updater#total_amount_refresher">
                 </div>
               </div>
               <div class="booking-button d-flex justify-content-center">
@@ -63,7 +76,7 @@
             <div class="total-label">
               Total
             </div>
-            <div class="total-value">
+            <div class="total-value" data-target="price-updater.total_amount">
               150$
             </div>
           </div>
