--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
-  <body style= "background-image: https://cdn.midjourney.com/c2c29230-3d7d-4604-8c24-d3bf027e2716/grid_0.png">
+   <body>
     <div class="main container">
       <%= render 'layouts/navbar' %>
       <%= yield %>
