--- a/app/views/jerseys/shop.html.erb
+++ b/app/views/jerseys/shop.html.erb
@@ -1,9 +1,6 @@
 <div class="container mt-3"  >
   <h1>ALL MY JERSEYS ( <%= @jerseys.count %> )</h1>
-  <form class="d-flex p-3" role="search">
-    <input class="form-control me-2" type="search" placeholder="Search for a team" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
+  <%= render 'jerseys/search'%>
   <div class="container card text-center">
     <% @jerseys[0..20].each do |jersey| %>
       <%= link_to jersey_path(jersey) do %>
