ajout d'un espace entre barre de recherche et index

--- a/app/views/jerseys/_search.html.erb
+++ b/app/views/jerseys/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: jerseys_path, method: :get, class: "d-flex" do %>
+<%= form_with url: jerseys_path, method: :get, class: "d-flex my-5" do %>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
