--- a/app/views/jerseys/_form.html.erb
+++ b/app/views/jerseys/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class='partial-btn-submit'>
-      <%= f.submit class: "btn-submit" %>
+      <%= f.submit class: "btn-submit px-5" %>
   </div>
 
   <% end %>
