--- a/app/views/jerseys/new.html.erb
+++ b/app/views/jerseys/new.html.erb
@@ -1,5 +1,6 @@
-<div class="form container w-75 " >
-  <h1 class="title">Add your wonderfull jersey
-  </h1>
+<div class="form container w-75" >
+  <div class="title d-flex justify-content-center my-5">
+    <h1>Add your wonderfull jersey</h1>
+  </div>
   <%= render 'form', jersey: @jersey %>
 </div>
