redesign de la search bar

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -130,3 +130,15 @@ p {
   border-color: rgba(255, 255, 255, 0.9);
   transition: all .3s ease;
 }
+
+.form-control {
+  border: 2px solid;
+  border-color: #34f32e;
+  border-radius: 15px;
+}
+
+.search-form {
+  border: 2px solid;
+  border-color: #34f32e;
+  border-radius: 15px;
+}
