--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <div class="main container">
       <%= render 'layouts/navbar' %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     </div>
