create de orders en cours, route nestée dans jersey, action en cours, btn booking dans show jersey pas relié au html

--- a/app/views/jerseys/show.html.erb
+++ b/app/views/jerseys/show.html.erb
@@ -44,7 +44,9 @@
           </div>
         </div>
         <div class="booking-form">
-          <form method="POST" action="#">
+
+
+          <form method="POST" action="/orders" accept-charset="UTF-8">
             <div class="date-bloc d-flex justify-content-center mt-5">
               <div class="begin-date">
                 <input type="date" id="begin-date" name="begin-date" value="2023-02-01" min="2023-03-01" max="2999-12-31">
@@ -73,4 +75,3 @@
     <h2>Jersey's story</h2>
     <%= "#{@jersey.description}" %>
   </div>
-</div>
