--- a/app/views/jerseys/_form.html.erb
+++ b/app/views/jerseys/_form.html.erb
@@ -7,11 +7,10 @@
     <%= f.input :number %>
     <%= f.input :year, required: true, collection: 1945..2023 %>
     <%= f.input :size, required: true, collection: ['XS', 'S', 'M', 'L', 'XL', 'XXL'] %>
-    <%= f.input :state, required: true, collection: ['Full of swet', 'Good enough', 'Smell victory'] %>
+    <%= f.input :state, required: true, collection: ['Full of sweat', 'Good enough', 'Smell victory'] %>
     <%= f.input :description %>
     <%= f.input :photo, required: true, placeholder: 'Lien de ta photo' %>
-    <%# <%= f.file :photo, required: true %>
-    <%# # // quand fonction ok %>
+    <%# <%= f.file :photo  // quand fonction ok %>
     <%= f.input :price_per_day, required: true %>
   </div>
 
