--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Orders#index</h1>
 <p>Find me in app/views/orders/index.html.erb</p>
+
+<%#    jersey_id récup via :
+
+<input type="button" value="Book Jersey" class="btn btn-outline-success px-5"> %>
+
+<%#  ==> faire le link_to correspondant %>
+
+j'ai une liste de jersey_id dans ma db, asso à mon @order
+pour chacune:
+    j'affiche la carte
