--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,14 @@
 <h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Unbounded:wght@900&display=swap');
+</style>
+<div class="container mt-3"  >
+  <h1>ALL MY ORDERS <% @orders.count %> </h1>
+<div id="orders">
+  <% @orders.each do |order| %>
+    <p>
+      <%= link_to "", jerseys %>
+    </p>
+  <% end %>
+</div>
