--- a/app/views/jerseys/show.html.erb
+++ b/app/views/jerseys/show.html.erb
@@ -56,7 +56,7 @@
               </div>
             </div>
             <div class="booking-button d-flex justify-content-center">
-              <input type="button" value="Book Jersey" class="btn btn-outline-success px-5">
+              <input type="submit" value="Book Jersey" class="btn btn-outline-success px-5">
             </div>
           </form>
         </div>
