--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,18 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
-}
+.navbar {
+  padding:40px 0;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(17, 25, 40, 0.25);;
+  color:#34f32e;
+  border-radius: 25% 10%;
+  border: 4px solid #34f32e;
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+  a {
+    color:#34f32e;
+  
+  }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  .navbar-nav {
+    color: white !important;
+  }
 }
