--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,30 +4,33 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" style="position: relative" id="navbarNavDropdown">
         <% if current_user.nil? %>
+        <ul class="navbar-nav" style="    position: absolute;
+    right: 0px;">
           <li class="nav-item">
             <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Log In", new_user_session_path, class:"nav-link" %>
           </li>
+        </ul>
         <% else %>
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "Rent a Jersey", new_jersey_path, class:"nav-link" %>
+            <%= link_to "Add Jersey", new_jersey_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "My Shop", shop_path, class:"nav-link" %>
+            <%= link_to "My Jerseys", shop_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "My Orders", orders_path, class:"nav-link" %>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="position: absolute; right: 0px;">
             <%= link_to "Log Out", destroy_user_session_path, method: "delete", class:"nav-link" %>
           </li>
-        <% end %>
-      </ul>
+        </ul>
+      <% end %>
     </div>
   </div>
 </nav>
