presque fin de la navbar avatar a droite

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,10 +9,16 @@
 
   a {
     color:#34f32e;
-  
+
   }
 
   .navbar-nav {
     color: white !important;
+  }
+
+  .navbar-avatar {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
   }
 }
