ajout des infos sur mon profil

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,10 +21,7 @@
             <%= link_to "Add Jersey", new_jersey_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "My Jerseys", shop_path, class:"nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "My Orders", orders_path, class:"nav-link" %>
+            <%= link_to "My Profil", profil_path, class:"nav-link" %>
           </li>
           <li class="nav-item" style="position: absolute; right: 0px;">
             <%= link_to "Log Out", destroy_user_session_path, method: "delete", class:"nav-link" %>
