correction sign up et log in

--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -10,7 +10,7 @@
     <h3>Mes infos</h3>
       My address : <%= current_user.seller_address %>
       My phone number : <%= current_user.phone_number %>
-      My Profit : <%= current_user.seller_address %>
+      My Profit : <%= current_user.jersey.orders %>
       My sales : <%= current_user.orders.count %>
     </div>
   </div>
