--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,52 @@
-<div class="container w-75">
-  <h2>Sign up</h2>
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
+<div class="form container w-75">
+  <div class="title d-flex justify-content-center my-5">
+    <h1>Sign Up</h1>
+  </div>
+  <div class='partial-form'>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),
   data: {turbo: false}) do |f| %>
-    <%= f.error_notification %>
-    <div class="form-inputs">
-      <%= f.input :email,
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
-      <%= f.input :password,
+        <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
+        <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-      <%= f.input :firstname,
+        <%= f.input :firstname,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "firstname" }%>
-      <%= f.input :lastname,
+        <%= f.input :lastname,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "lastname" }%>
-      <%= f.input :team,
+        <%= f.input :team,
                 required: false,
                 autofocus: true,
                 input_html: { autocomplete: "team" }%>
-      <%= f.input :avatar,
+        <%= f.input :avatar,
                 required: false,
                 autofocus: true,
                 input_html: { autocomplete: "avatar" }%>
-      <%= f.input :phone_number,
+        <%= f.input :phone_number,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "phone_number" }%>
-      <%= f.input :seller_address,
+        <%= f.input :seller_address,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "seller_address" }%>
-    </div>
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
-    </div>
-  <% end %>
+      </div>
+      <div class="partial-btn-submit">
+        <%= f.button :submit, "Sign up", class: "btn-submit px-5" %>
+      </div>
+    <% end %>
+  </div>
   <%# <%= render "devise/shared/links" %>
 </div>
